# rosu-pp-ffi

./: .gitignore  Cargo.toml  LICENSE  README.md  RosuPP.csproj  RosuPP.sln  SBRosuPP.sln
.github/workflows/: build.yml  ci.yml
JavaRosuPP/: pom.xml
JavaRosuPP/src/main/java/desu/life/: RosuFFI.java
RosuPP/: Cargo.toml  Rosu.cs  Rosu.targets  RosuPP.csproj
RosuPP.Tests/: Conveter.cs  OsuPP.cs  RosuPP.Tests.csproj  UnitTest1.cs  WorkingBeatmaps.cs
RosuPP/bindings/: RosuFFI.java  bindings.cs  bindings.h  bindings.py
RosuPP/src/: attributes.rs  beatmap.rs  difficulty.rs  error.rs  generate_state_lazer.rs  lib.rs  mode.rs  mods.rs  mods_intermode.rs  owned_string.rs  performance.rs  state.rs
RosuPP/src/beatmap/: attributes.rs  mod.rs
RosuPP/src/fruit/: attributes.rs
RosuPP/src/mania/: attributes.rs
RosuPP/src/osu/: attributes.rs
RosuPP/src/taiko/: attributes.rs
RosuPP/tests/: bindings_c.rs  bindings_cs.rs  bindings_py.rs
SBRosuPP/: Cargo.toml  NativeMethods.cs  Rosu.cs  Rosu.targets  SBRosu.cs
SBRosuPP/bindings/: bindings.cs  bindings.h  bindings.py
SBRosuPP/src/: difficulty.rs  error.rs  mode.rs  owned_string.rs  performance.rs
SBRosuPP/src/beatmap/: attributes.rs
SBRosuPP/src/mania/: attributes.rs
SBRosuPP/src/osu/: attributes.rs
SBRosuPP/src/taiko/: attributes.rs
SBRosuPP/tests/: bindings_c.rs  bindings_cs.rs  bindings_py.rs
SharpRosuPP/RosuPP/: .editorconfig  NativeMethods.cs  Rosu.cs  Rosu.targets  RosuFFI.cs  RosuPP.csproj  SBRosu.cs  SBRosuPP.csproj
SharpRosuPP/RosuPP.Tests/: Conveter.cs  OsuPP.cs  PPUnitTest.cs  RosuPP.Tests.csproj  SBRosuPP.Tests.csproj  UnitTest1.cs
SharpRosuPP/RosuPP/bindings/: bindings.cs
bindings/: Interop.cs  RosuFFI.cs  RosuFFI.h  RosuFFI.java  RosuFFI.kt  RosuFFI.py
rosu-pp-ffi/: Cargo.toml
rosu-pp-ffi-build/: Cargo.toml  build.rs
rosu-pp-ffi-build/bindings/: bindings.py
rosu-pp-ffi/src/: difficulty.rs  error.rs  lib.rs  mods.rs  owned_string.rs  performance.rs  state.rs
rosu-pp-ffi/src/beatmap/: attributes.rs  mod.rs
rosu-pp-ffi/src/fruit/: attributes.rs
rosu-pp-ffi/src/mania/: attributes.rs
rosu-pp-ffi/src/osu/: attributes.rs
rosu_pp_ffi/: Cargo.toml
rosu_pp_ffi/src/: attributes.rs  difficulty.rs  error.rs  gradual.rs  hitresult_priority.rs  lib.rs  mode.rs  mods.rs  owned_string.rs  performance.rs  state.rs
rosu_pp_ffi/src/beatmap/: attributes.rs  hitobject.rs  mod.rs  pos.rs
rosu_pp_ffi/src/fruit/: attributes.rs
rosu_pp_ffi/src/mania/: attributes.rs
rosu_pp_ffi/src/osu/: attributes.rs
rosu_pp_ffi/src/taiko/: attributes.rs
rosu_pp_ffi_build/: Cargo.toml  build.rs
sb_pp_ffi/: Cargo.toml
sb_pp_ffi/src/: difficulty.rs  error.rs  gradual.rs  hitresult_priority.rs  lib.rs  mods.rs  owned_string.rs  state.rs
sb_pp_ffi/src/beatmap/: attributes.rs  hitobjects.rs  mod.rs  pos.rs  too_suspicious.rs
sb_pp_ffi/src/fruit/: attributes.rs
sb_pp_ffi/src/mania/: attributes.rs
sb_pp_ffi/src/osu/: attributes.rs
sb_pp_ffi/src/taiko/: attributes.rs
sb_pp_ffi_build/: Cargo.toml  build.rs
tests/: bindings.rs
