[package]
name = "rosu-pp-ffi"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
interoptopus = { version = "0.14.27", features = ["log"] }
rosu-pp = { git = "https://github.com/desu-life/rosu-pp", branch = "kanon" }
rosu-map = { git = "https://github.com/MaxOhn/rosu-map", branch = "pp-update" }
rosu-mods = { git = "https://github.com/MaxOhn/rosu-mods", branch = "main", features = ["serde"] }
thiserror = "2.0.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
interoptopus_backend_csharp = "0.14.25"
interoptopus_backend_c = "0.14.25"
interoptopus_backend_cpython = "0.14.25"

