[package]
name = "sb-pp-ffi"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
interoptopus = { version = "0.14.27", features = ["log"] }
rosu-pp = { git = "https://github.com/ppy-sb/rosu-pp" }
rosu-map = "0.1.2"
rosu-mods = { version = "0.1.1", features = ["serde"] }
thiserror = "1.0"
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }

[dev-dependencies]
interoptopus_backend_csharp = "0.14.25"
interoptopus_backend_c = "0.14.25"
interoptopus_backend_cpython = "0.14.25"

