[package]
name = "rosu-pp-ffi-build"
version = "0.1.0"
edition = "2021"
publish = false

[build-dependencies]
interoptopus = { version = "0.14.27", features = ["log", "serde"] }
interoptopus_backend_csharp = "0.14.25"
interoptopus_backend_c = "0.14.25"
interoptopus_backend_cpython = "0.14.25"
rosu-pp-ffi = { path = "../rosu-pp-ffi" }