[package]
name = "rosu_pp_ffi"
version = "0.2.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
interoptopus = { version = "0.14.27", features = ["log", "serde"] }
rosu-pp = { git = "https://github.com/MaxOhn/rosu-pp", rev = "27a67242cad155a2767f5a25a423ca4ec3e3c274" }
rosu-map = { version = "0.2.1" }
rosu-mods = { version = "0.4.0", features = ["serde"] }
thiserror = "2.0.12"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
