[package]
name = "sb_pp_ffi"
version = "0.2.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
interoptopus = { version = "0.14.27", features = ["log", "serde"] }
rosu-pp = { git = "https://github.com/ppy-sb/rosu-pp", rev = "f918f88f892ee1cdcde1727174d391b29925eb81" }
rosu-map = { version = "0.2.0" }
rosu-mods = { version = "0.2.0", features = ["serde"] }
thiserror = "2.0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
